✨ Loom experiment